--- a/site/templates/stylus/_desktop-styles.styl
+++ b/site/templates/stylus/_desktop-styles.styl
@@ -1,9 +1,9 @@
 //  NAVIGATION
 // ===========
 nav
-  position fixed
+  background-color transparent
   padding 1em
-  
+  width 150px  
   ul
     li
       display block
