--- a/site/templates/stylus/_mobile-styles.styl
+++ b/site/templates/stylus/_mobile-styles.styl
@@ -1,10 +1,13 @@
 //  NAVIGATION
 // ===========
 nav
+  background-color white
   font-family 'Oswald', sans-serif
   font-size(18)
   padding 1em
+  position fixed
   text-align center
+  width 100%
   z-index 2
   ul
     li
@@ -32,9 +35,14 @@ nav
 .nav-logo
   &.hide
     opacity(0)
+  margin 0 auto
   transition()
   &.show
     opacity(1)
+
+
+.masthead
+  padding-top 4em
   
 
 .tagline
